# lerobot-gui-wrapper

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  robot_pipeline.py  ui-preview.html
Resources/: config-tab-guide.md  deploy-tab-guide.md  error-catalog.md  experiments-tab-guide.md  first-time-setup.md  hardware-operations-guide.md  history-tab-guide.md  record-tab-guide.md  resources-index.md  support-bundle.md  teleop-tab-guide.md  training-tab-guide.md  ui-layout-style-standard.md
docs/: community-profiles.md  compatibility-matrix.md  first-time-setup.md  ga-validation.md  qt_parity_matrix.md  ui-layout-style-standard.md  upstream-bridge.md
robot_pipeline_app/: __init__.py  app_icon.py  app_theme.py  artifacts.py  auto_names.py  background_jobs.py  camera_schema.py  camera_state.py  checks.py  checks_calibration.py  checks_common.py  checks_deploy.py  checks_record.py  checks_teleop.py  checks_train.py  cli_modes.py  command_overrides.py  command_text.py  commands.py  compat.py  compat_policy.py  compat_snapshot.py  config_store.py  constants.py  dataset_operations.py  dataset_qa.py  dataset_tools.py  deploy_diagnostics.py  deploy_workflow_helpers.py  desktop_launcher.py  diagnostics.py  diagnostics_formatters.py  experiments_service.py  failure_inspector.py  feature_flags.py  gui_app.py  gui_async.py  gui_camera.py  gui_config_tab.py  gui_deploy_tab.py  (+84 more)
schema/: community_profile.v1.yaml  diagnostic_event.v1.json  preflight_report.v2.json
tests/: test_app_icon.py  test_artifacts.py  test_auto_names.py  test_background_jobs.py  (+70 more)
(+7 files in other folders)
